@@ -1,3 +1,7 @@
+2005-11-21  Kevin P. Fleming  <kpfleming@digium.com>
+
+	* ensure that case changes made to chan_sip and chan_iax2 peer/user names are not ignored during reload operations
+
 2005-11-21  Josh Roberson <josh@asteriasgi.com>
 
 	* Makefile: Re-fix Darwin poll issues. 
